src/objects/Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment Plan Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Due_Invoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Due Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dunning_phase__c</fullName>
        <label>Dunning phase</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_date__c</fullName>
        <label>End date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Has_payment_plan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has payment plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Amount__c</fullName>
        <label>Total Amount Incl VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Invoice_Date__c</fullName>
        <label>Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_Due_Date__c</fullName>
        <label>Invoice Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Invoice_ID__c</fullName>
        <externalId>true</externalId>
        <label>Invoice ID</label>
        <length>30</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Invoice_Type__c</fullName>
        <label>Invoice Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Advance note</fullName>
                </value>
                <value>
                    <fullName>Invoice, End note</fullName>
                </value>
                <value>
                    <fullName>Yearly note</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payment_plan_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Payment plan ID</label>
        <referenceTo>Payment_Plan__c</referenceTo>
        <relationshipName>Invoices</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Payment_plan__c</fullName>
        <formula>IF(ISBLANK(Payment_plan_ID__c),FALSE,TRUE)</formula>
        <label>Payment plan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Payment_status__c</fullName>
        <label>Payment status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Due</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_date__c</fullName>
        <label>Start date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Total_amount_excl_VAT__c</fullName>
        <label>Total amount excl VAT</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Fatura</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Invoice Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Faturas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>